# agentic-payments

./: .gitignore  Makefile  README.md  pyproject.toml
data/processed/: dune_x402_embedding.parquet  dune_x402_events.parquet  (+14 more)
experiments/: snapshot_validation.py  synthetic_separation.py
memos/: 00_pitch_script.md  00_pitch_script.tex  01_pitch_framing.md  01_pitch_framing.tex  02_moat_thesis.md  02_moat_thesis.tex  03_open_gaps.md  03_open_gaps.tex  04_polymarket_assets.md  04_polymarket_assets.tex  05_data_plan.md  05_data_plan.tex  06_today_plan.md  06_today_plan.tex  07_synthetic_design.md  07_synthetic_design.tex  08_features_spec.md  08_features_spec.tex  09_hackathon_logistics.md  09_hackathon_logistics.tex  10_alternative_datasets.md  10_alternative_datasets.tex  11_dashboard_demo.md  11_dashboard_demo.tex  12_data_integration_plan.md  12_public_data_collection.md  12_public_data_collection.tex  13_methodology_memo.tex  13_snapshot_findings.md  14_real_data_quality.md  14_traditional_payments_generalisation.md  14_traditional_payments_generalisation.tex  15_data_integration_plan.md  15_data_integration_plan.tex  16_snapshot_findings.md  16_snapshot_findings.tex  17_real_data_quality.md  17_real_data_quality.tex  18_dune_cto_data.md  19_pitch_plan.md  (+11 more)
scripts/: analyze_snapshots.py  export_to_web.py  probe_dates.py  probe_lag.py  pull_dune.py
src/: pipeline.py  pipeline_dune.py  pipeline_public.py
tests/: test_pipeline.py  test_risk_vector.py
web/: .gitignore  README.md  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
(+54 files in other folders)
