[project]
name = "agentic-payments"
version = "0.1.0"
description = "Behavioural risk intelligence layer for agent traffic — Bloomsbury Tech hackathon build"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.26",
    "pandas>=2.2",
    "scikit-learn>=1.5",
    "scipy>=1.13",
    "umap-learn>=0.5",
    "matplotlib>=3.9",
    "seaborn>=0.13",
    "networkx>=3.3",
    "tqdm>=4.66",
    "pyarrow>=16.0",
    "requests>=2.32",
]

[project.optional-dependencies]
chain = [
    "web3>=6.20",
]
dash = [
    "streamlit>=1.38",
    "plotly>=5.24",
]
dev = [
    "pytest>=8.3",
    "ruff>=0.6",
    "ipykernel>=6.29",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.ruff]
line-length = 100
target-version = "py311"
